--- a/Node/package.json
+++ b/Node/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.211.0",
+    "bad-words": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-multiparty": "^2.1.0",
